aelys/tests/modules/errors/std_not_available.aelys
// std_not_available.aelys - Should error for stdlib module
needs std.math
